# StatusLight

./: .gitignore  404.html  CLAUDE.md  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.claude/agents/: codex-rust-engineer.md  codex-rust-reviewer.md
.github/workflows/: ci.yml  release.yml
crates/slicky-cli/: Cargo.toml
crates/slicky-cli/src/: animate.rs  daemon_client.rs  main.rs  slack.rs  update.rs
crates/slicky-core/: Cargo.toml
crates/slicky-core/src/: animation.rs  config.rs  lib.rs
crates/slicky-daemon/: Cargo.toml
crates/slicky-daemon/src/: api.rs  main.rs  slack.rs  state.rs  update.rs
crates/slicky-ffi/src/: lib.rs
crates/statuslight-cli/: Cargo.toml
crates/statuslight-cli/src/: animate.rs  color_cmd.rs  daemon_client.rs  main.rs  preset_cmd.rs  slack.rs  startup.rs  update.rs
crates/statuslight-core/: Cargo.toml
crates/statuslight-core/src/: animation.rs  color.rs  config.rs  device.rs  driver.rs  error.rs  lib.rs  protocol.rs  registry.rs
crates/statuslight-core/src/drivers/: blink1.rs  blinkstick.rs  embrava.rs  epos.rs  kuando.rs  luxafor.rs  mod.rs  muteme.rs  slicky.rs
crates/statuslight-daemon/: Cargo.toml
crates/statuslight-daemon/src/: api.rs  button.rs  main.rs  slack.rs  state.rs  token_store.rs  update.rs
crates/statuslight-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/statuslight-ffi/include/: slicky.h  statuslight.h
crates/statuslight-ffi/src/: lib.rs
development/architecture/: index.html
development/contributing/: index.html
docs/plans/: 005-ux-overhaul.md  006-app-bundle.md  007-swiftui-gui.md  008-animations-customization.md  009-dual-ui-cli-completeness.md  014-slack-integration-overhaul.md  015-streamlined-slack-setup.md  021-fix-preexisting-issues.md  022-device-state-reading.md  023-button-status-sync.md
docs/reference/: daemon-api.md  ffi.md  protocol.md
docs/slack-setup/: index.md  manifest.json
getting-started/installation/: index.html
getting-started/quickstart/: index.html
macos/: Info.plist.template
macos/OpenSlicky/: OpenSlickyApp.swift  SlickyCLI.swift
macos/StatusLight/: OpenSlickyApp.swift  SlickyCLI.swift  StatusLightApp.swift  StatusLightCLI.swift
plans/001-full-stack-scaffold/: index.html
plans/002-ci-cd-setup/: index.html
plans/003-github-pages/: index.html
plans/004-dmg-release/: index.html
plans/005-ux-overhaul/: index.html
plans/006-app-bundle/: index.html
plans/007-swiftui-gui/: index.html
plans/008-animations-customization/: index.html
plans/009-dual-ui-cli-completeness/: index.html
plans/014-slack-integration-overhaul/: index.html
plans/015-streamlined-slack-setup/: index.html
plans/016-auto-update-install/: index.html
plans/017-bidirectional-slack-sync/: index.html
plans/023-button-status-sync/: index.html
reference/cli/: index.html
reference/daemon-api/: index.html
reference/ffi/: index.html
reference/protocol/: index.html
scripts/: build-app.sh  generate-icon.swift  uninstall.applescript  uninstall.sh
search/: search_index.json
slack-setup/: index.html
