[workspace]
resolver = "2"
members = [
    "crates/statuslight-core",
    "crates/statuslight-cli",
    "crates/statuslight-daemon",
    "crates/statuslight-ffi",
]
exclude = [
    "tools/slicky-probe",
]

[workspace.dependencies]
# Shared across crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Device communication
hidapi = { version = "2", features = ["macos-shared-device"] }

# CLI
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

# Encryption
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"

# Config & utilities
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["clock", "serde"] }
semver = "1"
ureq = { version = "3", features = ["json"] }
open = "5"

# Daemon
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
axum = "0.8"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
