[package]
name = "slicky-cli"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "slicky"
path = "src/main.rs"

[dependencies]
slicky-core = { path = "../slicky-core" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
open = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
toml = { workspace = true }
