[package]
name = "slicky-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slickyd"
path = "src/main.rs"

[dependencies]
slicky-core = { path = "../slicky-core" }
axum = { workspace = true }
tokio = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
