[package]
name = "statuslight-cli"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "statuslight"
path = "src/main.rs"

[dependencies]
statuslight-core = { path = "../statuslight-core" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
open = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
toml = { workspace = true }
