[package]
name = "slicky-core"
version = "0.1.5"
edition = "2021"

[dependencies]
hidapi = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
