[package]
name = "statuslight-daemon"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "statuslightd"
path = "src/main.rs"

[dependencies]
statuslight-core = { path = "../statuslight-core" }
axum = { workspace = true }
tokio = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
