[package]
name = "statuslight-ffi"
version = "0.2.0"
edition = "2021"

[lib]
name = "statuslight_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
statuslight-core = { path = "../statuslight-core" }
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
